# Linux-AI-Assistant---Project

./: .editorconfig  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  AUDIT_REPORT.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHANGELOG_QUICK_WINS.md  CHAT_INTERFACE_ENHANCEMENT_SUMMARY.md  COMMAND_PALETTE_AND_MICROINTERACTIONS_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  CONVERSATION_BRANCHING_SUMMARY.md  CURRENT_STATE_ANALYSIS.md  Complete_Database_Setup_Guide.md  DESIGN_SYSTEM_REFERENCE.md  ENHANCEMENT_CROSS_REFERENCE.md  LICENSE  LINUX_ENHANCEMENTS_PLAN.md  LINUX_QUICK_WINS_SUMMARY.md  Linux  AI Desktop Assistant  Linux AI Assistant.code-workspace  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_RESULTS.md  PR_BODY_UI_UX_FINAL.md  PR_DESCRIPTION.md  PULL_REQUEST.md  Phase_6.2_Error_Handling_Summary.md  Phase_6.6_Repository_Setup_Summary.md  QUICK_WINS_IMPLEMENTATION.md  Quick_Reference_Guide.md  README.md  SECURITY.md  SETTINGS_MODERNIZATION_SUMMARY.md  SETUP_GUIDE.md  SPRINT_2_SUMMARY.md  SPRINT_3_SUMMARY.md  TESTING_STRATEGY.md  UI_IMPROVEMENTS_SUMMARY.md  (+10 more)
.github/: dependabot.yml  (+1 more)
linux-ai-assistant/src-tauri/: Cargo.lock.backup-20251029-194219  Cargo.toml  tauri.conf.json
linux-ai-assistant/src-tauri/src/: ipc.rs  lib.rs  main.rs
linux-ai-assistant/src-tauri/src/commands/: chat.rs  conversations.rs  export.rs  git.rs  messages.rs  mod.rs  performance.rs  project.rs  provider.rs  run.rs  settings.rs  shortcuts.rs  updater.rs  window.rs
linux-ai-assistant/src-tauri/src/database/: conversations.rs  messages.rs  mod.rs  schema.rs
(+162 files in other folders)
