[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1", features = ["tray-icon"] }
tauri-plugin-log = "2.7.0"
rusqlite = { version = "0.37", features = ["bundled"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
tauri-plugin-notification = "2.3.2"
tauri-plugin-global-shortcut = "2.3.0"
image = "0.25"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
